# self-supervised-outlier

./: LICENSE  README.md  pyproject.toml  setup.py
noisy_outlier/: __init__.py
noisy_outlier/hyperopt/: __init__.py  hyperopt.py
noisy_outlier/model/: __init__.py  model.py  transformer.py
noisy_outlier_detection/: __init__.py
noisy_outlier_detection/hyperopt/: __init__.py  hyperopt.py
noisy_outlier_detection/model/: model.py  transformer.py
publication/: benchmark_added_noisy_features.py  benchmark_no_noisy_features.py  data_loading.py  notebook for plots.ipynb
publication/data/: HeartDisease_withoutdupl_norm_05_v10.arff  Lymphography_withoutdupl_norm_idf.arff  Stamps_withoutdupl_norm_05_v10.arff
publication/results/: HeartDisease_withoutdupl_norm_05_v10.csv  Lymphography_withoutdupl_norm_idf.csv  Stamps_withoutdupl_norm_05_v10.csv  WPBC_withoutdupl_norm.csv
publication/results/with_noisy_features/: HeartDisease.csv  Lymphography.csv  Stamps.csv  WPBC.csv
